[gd_scene load_steps=8 format=3 uid="uid://vbgdellinm4f"]

[ext_resource type="Script" uid="uid://b3naunnr3n6a8" path="res://assets/menus/start_screen.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://cmf7gbplv7hfi" path="res://assets/entities/Player/textures/krakie_eat.png" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://cmhasd8bpv730" path="res://assets/entities/UI/titelgrej.png" id="2_ta3oe"]
[ext_resource type="Texture2D" uid="uid://ihresa143t7i" path="res://assets/menus/textures/knappar/knappliten_1.png" id="3_2elac"]
[ext_resource type="Theme" uid="uid://lp3hkt7prfqi" path="res://assets/entities/UI/resources/UITheme.tres" id="3_x407y"]
[ext_resource type="Texture2D" uid="uid://cifdaybcdx6bg" path="res://assets/menus/textures/knappar/knappliten_2.png" id="4_oaiin"]
[ext_resource type="Texture2D" uid="uid://bv2qwq63cfcya" path="res://assets/menus/textures/knappar/knappliten_3.png" id="5_x2l61"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -12.0
offset_right = -11.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_l6cm7")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5000.0
offset_right = 5000.0
offset_bottom = 6332.0
grow_horizontal = 2
scale = Vector2(0.08, 0.08)
pivot_offset = Vector2(5000, 0)
texture = ExtResource("2_ta3oe")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 810.0
offset_top = 514.0
offset_right = 1140.0
offset_bottom = 702.525
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_2elac")
expand_mode = 5

[node name="TextureRect4" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 820.0
offset_top = 665.0
offset_right = 1170.0
offset_bottom = 853.525
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_oaiin")
expand_mode = 5

[node name="TextureRect5" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 825.0
offset_top = 795.0
offset_right = 1175.0
offset_bottom = 983.53
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_x2l61")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -385.0
offset_top = -805.0
offset_right = 352.59
offset_bottom = 105.575
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 65
alignment = 1

[node name="start_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../exit_button")
focus_neighbor_bottom = NodePath("../option_button")
theme = ExtResource("3_x407y")
theme_override_font_sizes/font_size = 50
text = "START"

[node name="option_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../start_button")
focus_neighbor_bottom = NodePath("../exit_button")
theme = ExtResource("3_x407y")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../option_button")
focus_neighbor_bottom = NodePath("../start_button")
theme = ExtResource("3_x407y")
theme_override_font_sizes/font_size = 50
text = "EXIT"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -784.0
offset_top = 293.0
offset_right = 71.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_ekxnf")
expand_mode = 4
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/option_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="_on_quit_button_pressed"]
